// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      Setting
    </span>
  </div>
  <article
    className="wonder-settingScene-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Scene
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="setting-scene-ambient"
        >
          <div
            className="header-item"
          >
            <div
              className="component-item"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                  title="set ambient color which is global."
                >
                  AmbientColor
                </div>
                <div
                  className="item-content item-color"
                >
                  <div
                    className="color-hex"
                    onClick={[Function]}
                    style={
                      Object {
                        "background": "#7df1e8",
                      }
                    }
                  />
                  <div
                    className="color-select"
                    onClick={[Function]}
                  >
                    <img
                      src="./public/img/color.png"
                    />
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
        <div
          className="setting-scene-skybox"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="cubemap-img"
              onClick={[Function]}
            />
            <button
              className="cubemap-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      Setting
    </span>
  </div>
  <article
    className="wonder-settingScene-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Scene
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="setting-scene-ambient"
        >
          <div
            className="header-item"
          >
            <div
              className="component-item"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                  title="set ambient color which is global."
                >
                  AmbientColor
                </div>
                <div
                  className="item-content item-color"
                >
                  <div
                    className="color-hex"
                    onClick={[Function]}
                    style={
                      Object {
                        "background": "#1918e8",
                      }
                    }
                  />
                  <div
                    className="color-select"
                    onClick={[Function]}
                  >
                    <img
                      src="./public/img/color.png"
                    />
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
        <div
          className="setting-scene-skybox"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="cubemap-img"
              onClick={[Function]}
            />
            <button
              className="cubemap-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      Setting
    </span>
  </div>
  <article
    className="wonder-settingScene-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Scene
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="setting-scene-ambient"
        >
          <div
            className="header-item"
          >
            <div
              className="component-item"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                  title="set ambient color which is global."
                >
                  AmbientColor
                </div>
                <div
                  className="item-content item-color"
                >
                  <div
                    className="color-hex"
                    onClick={[Function]}
                    style={
                      Object {
                        "background": "#1918e8",
                      }
                    }
                  />
                  <div
                    className="color-select"
                    onClick={[Function]}
                  >
                    <img
                      src="./public/img/color.png"
                    />
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
        <div
          className="setting-scene-skybox"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="cubemap-img"
              onClick={[Function]}
            />
            <button
              className="cubemap-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      Setting
    </span>
  </div>
  <article
    className="wonder-settingScene-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Scene
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="setting-scene-ambient"
        >
          <div
            className="header-item"
          >
            <div
              className="component-item"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                  title="set ambient color which is global."
                >
                  AmbientColor
                </div>
                <div
                  className="item-content item-color"
                >
                  <div
                    className="color-hex"
                    onClick={[Function]}
                    style={
                      Object {
                        "background": "#7df1e8",
                      }
                    }
                  />
                  <div
                    className="color-select"
                    onClick={[Function]}
                  >
                    <img
                      src="./public/img/color.png"
                    />
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
        <div
          className="setting-scene-skybox"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="cubemap-img"
              onClick={[Function]}
            />
            <button
              className="cubemap-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`redo_undo: ambientLight prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<div
  className="header-item"
>
  <div
    className="component-item"
  >
    <span
      className="item-title"
      onClick={[Function]}
      onMouseOver={[Function]}
    >
      Setting
    </span>
  </div>
  <article
    className="wonder-settingScene-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Scene
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="setting-scene-ambient"
        >
          <div
            className="header-item"
          >
            <div
              className="component-item"
            >
              <article
                className="inspector-item"
              >
                <div
                  className="item-header"
                  title="set ambient color which is global."
                >
                  AmbientColor
                </div>
                <div
                  className="item-content item-color"
                >
                  <div
                    className="color-hex"
                    onClick={[Function]}
                    style={
                      Object {
                        "background": "#000000",
                      }
                    }
                  />
                  <div
                    className="color-select"
                    onClick={[Function]}
                  >
                    <img
                      src="./public/img/color.png"
                    />
                  </div>
                </div>
              </article>
            </div>
          </div>
        </div>
        <div
          className="setting-scene-skybox"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="cubemap-img"
              onClick={[Function]}
            />
            <button
              className="cubemap-remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;
